@@ -1,7 +1,9 @@
 -------------------------------------------------------------------------------
 Changes in version 1.102
 
-- Added support for str formatting in fmt_multi with "S".
+- Added more conversions to fmt_multi:
+  S - formats a str
+  m - formats the result of strerror(errno)
 
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
